--- a/cargbin/Cargo.toml
+++ b/cargbin/Cargo.toml
@@ -7,3 +7,6 @@ readme.workspace = true
 license.workspace = true
 
 [dependencies]
+eframe = { version = "0.27.0", features = ["persistence"] }
+egui27 = { version = "0.27", package = "egui", default-features = false, optional = true }
+catppuccin-egui = { version = "5.1", default-features = false, features = ["egui27"] }
