--- a/cargbin/Cargo.toml
+++ b/cargbin/Cargo.toml
@@ -7,9 +7,21 @@ readme.workspace = true
 license.workspace = true
 
 [dependencies]
-eframe = { version = "0.27.0", features = ["persistence"] }
-egui27 = { version = "0.27", package = "egui", default-features = false, optional = true }
-catppuccin-egui = { version = "5.1", default-features = false, features = ["egui27"] }
-egui_nerdfonts = "0.1.3"
+eframe = { version = "0.29.0", features = ["persistence"] }
+# egui27 = { version = "0.27", package = "egui", default-features = false, optional = true }
+# catppuccin-egui = { version = "5.1", default-features = false, features = ["egui27"] }
+# egui_nerdfonts = "0.1.3"
 defaults = "0.2.0"
-egui_plot = "0.27.0"
+egui_plot = "0.29.0"
+tracing-subscriber = "0.3.18"
+tracing = "0.1.40"
+egui_tracing = "0.2.6"
+tokio = { version = "1.40.0", features = ["full"] }
+# tungstenite = { version = "0.24.0", features = ["native-tls"] }
+url = "2.5.2"
+tokio-tungstenite = { version = "0.24.0", features = ["native-tls"] }
+futures-util = "0.3.30"
+
+[dependencies.openssl]
+version = "0.10" 
+features = ["vendored"] 
