--- a/cargbin/Cargo.toml
+++ b/cargbin/Cargo.toml
@@ -17,11 +17,13 @@ tracing-subscriber = "0.3.18"
 tracing = "0.1.40"
 egui_tracing = "0.2.6"
 tokio = { version = "1.40.0", features = ["full"] }
-# tungstenite = { version = "0.24.0", features = ["native-tls"] }
+tungstenite = { version = "0.24.0", features = ["native-tls"] }
 url = "2.5.2"
-tokio-tungstenite = { version = "0.24.0", features = ["native-tls"] }
 futures-util = "0.3.30"
-
+rumqttc = "0.24.0"
+futures = "0.3.31"
+crossbeam-channel = "0.5.13"
+# tungstenite = {version="0.21",features=["native-tls"]}
 [dependencies.openssl]
 version = "0.10" 
 features = ["vendored"] 
